--- a/templates/etc-php5-fpm-pool-d-www-conf.j2
+++ b/templates/etc-php5-fpm-pool-d-www-conf.j2
@@ -388,9 +388,9 @@ chdir = /
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 ;php_flag[display_errors] = off
-;php_admin_value[error_log] = /var/log/fpm-php.www.log
-;php_admin_flag[log_errors] = on
-;php_admin_value[memory_limit] = 32M
-;php_admin_value[upload_tmp_dir] = "/home/webmaster/tmp"
-;php_admin_value[session.save_path] = "/home/webmaster/tmp"
+php_admin_value[error_log] = /var/log/fpm-php.www.log
+php_admin_flag[log_errors] = on
+php_admin_value[memory_limit] = 32M
+php_admin_value[upload_tmp_dir] = "/home/webmaster/tmp"
+php_admin_value[session.save_path] = "/home/webmaster/tmp"
 
